--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,21 +1,18 @@
-u_wb_host               1200            325            N
-u_glbl                   800            800            N
-u_mbist5                 800            1300           N
-u_mbist6                 800            1800           N
-u_mbist7                 800            2400           N
-u_mbist8                 800            3000           N
-u_sram5_1kb              200            1200           N
-u_sram6_1kb              200            1800           N
-u_sram7_1kb              200            2400           N
-u_sram8_1kb              200            3000           N
+u_wb_host               1800            325            N
+u_pinmux                2100            1400           N
+u_mac_wrap              2100            700            N
 
-u_intercon              1200            800            N
-u_mbist1                1600            800            N
-u_mbist2                1600            1400           N
-u_mbist3                1600            2000           N
-u_mbist4                1600            2600           N
+u_intercon              1800            700            N
 
-u_sram1_2kb             2000            800            N
-u_sram2_2kb             2000            1400           N
-u_sram3_2kb             2000            2000           N
-u_sram4_2kb             2000            2600           N
+
+u_mbist0                150             0700           N
+u_sram0_2kb             150             0200           FS
+u_sram1_2kb             950             0200           FS
+u_sram2_2kb             150             1000           N
+u_sram3_2kb             950             1000           N
+
+u_mbist1                150             2000           N
+u_sram4_2kb             150             1500           FS
+u_sram5_2kb             950             1500           FS
+u_sram6_2kb             150             2300           N
+u_sram7_2kb             950             2300           N
