bus repeater addition

--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,18 +1,23 @@
-u_wb_host               1800            325            N
-u_pinmux                2100            1400           N
-u_mac_wrap              2100            700            N
+u_wb_host               1800            425            N
+u_pinmux                2100            1500           N
+u_mac_wrap              2100            800            N
 
-u_intercon              1800            700            N
+u_intercon              1800            800            N
 
 
-u_mbist0                150             0700           N
-u_sram0_2kb             150             0200           FS
-u_sram1_2kb             950             0200           FS
-u_sram2_2kb             150             1000           N
-u_sram3_2kb             950             1000           N
+u_mbist0                150             0800           N
+u_sram0_2kb             150             0300           FS
+u_sram1_2kb             975             0300           FS
+u_sram2_2kb             150             1100           N
+u_sram3_2kb             975             1100           N
 
-u_mbist1                150             2000           N
-u_sram4_2kb             150             1500           FS
-u_sram5_2kb             950             1500           FS
-u_sram6_2kb             150             2300           N
-u_sram7_2kb             950             2300           N
+u_mbist1                150             2100           N
+u_sram4_2kb             150             1600           FS
+u_sram5_2kb             975             1600           FS
+u_sram6_2kb             150             2400           N
+u_sram7_2kb             975             2400           N
+
+u_rp_south              100               20           N
+u_rp_north              100             3400           N
+u_rp_east               2820              50           E
+u_rp_west               50               100           E
